// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ingredient page renders correctly 1`] = `
Array [
  <div
    className="heading modal-header"
  >
    <h4
      className="modal-title"
    >
      Recipes using ""
      <span
        className="float-right active glyphicon glyphicon-home"
        href="/"
        onClick={[Function]}
        style={Object {}}
      />
    </h4>
  </div>,
  <div
    className="modal-body"
  >
    <div
      className="alert alert-info"
      role="alert"
    >
      No recipes found for that ingredient
    </div>
  </div>,
]
`;

exports[`Ingredient page view renders loading correctly 1`] = `
Array [
  <div
    className="heading modal-header"
  >
    <h4
      className="modal-title"
    >
      Recipes using "Test"
      <span
        className="float-right active glyphicon glyphicon-home"
        href="/"
        onClick={[Function]}
        style={Object {}}
      />
    </h4>
  </div>,
  <div
    className="modal-body"
  >
    <div
      className="alert alert-info"
      role="alert"
    >
      Loading...
    </div>
  </div>,
]
`;

exports[`Ingredient page view renders when no result correctly 1`] = `
Array [
  <div
    className="heading modal-header"
  >
    <h4
      className="modal-title"
    >
      Recipes using "Test"
      <span
        className="float-right active glyphicon glyphicon-home"
        href="/"
        onClick={[Function]}
        style={Object {}}
      />
    </h4>
  </div>,
  <div
    className="modal-body"
  >
    <div
      className="alert alert-info"
      role="alert"
    >
      No recipes found for that ingredient
    </div>
    <div
      className="alert alert-info"
      role="alert"
    >
      No recipes provided
    </div>
  </div>,
]
`;

exports[`Ingredient page view renders with recipes correctly 1`] = `
Array [
  <div
    className="heading modal-header"
  >
    <h4
      className="modal-title"
    >
      Recipes using "Test"
      <span
        className="float-right active glyphicon glyphicon-home"
        href="/"
        onClick={[Function]}
        style={Object {}}
      />
    </h4>
  </div>,
  <div
    className="modal-body"
  >
    <div
      className="list-group"
    >
      <a
        className="list-group-item"
        href="/recipe/1"
        onClick={[Function]}
        style={undefined}
      >
        Recipe 1
      </a>
      <a
        className="list-group-item"
        href="/recipe/2"
        onClick={[Function]}
        style={undefined}
      >
        Recipe 2
      </a>
    </div>
  </div>,
]
`;
